--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,28 +20,32 @@ services:
     # image: ghcr.io/lissy93/dashy or image: lissy93/dashy:arm64v8
 
     # Pass in your config file below, by specifying the path on your host machine
-    # volumes:
-      # - /path/to/my-config.yml:/app/public/conf.yml
-      # - /path/to/item-icons:/app/public/item-icons
+    volumes:
+      - public-dashy:/app/public
+      - item-icons-dashy:/app/public/item-icons
 
     # Set port that web service will be served on. Keep container port as 80
-    ports:
-      - 4000:80
+#    ports:
+#      - 4000:80
 
     # Set any environmental variables
-    environment:
-      - NODE_ENV=production
+#    environment:
+#      - NODE_ENV=production
     # Specify your user ID and group ID. You can find this by running `id -u` and `id -g`
     #  - UID=1000
     #  - GID=1000
 
     # Specify restart policy
-    restart: unless-stopped
+#    restart: unless-stopped
 
     # Configure healthchecks
-    healthcheck:
-      test: ['CMD', 'node', '/app/services/healthcheck']
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+#    healthcheck:
+#      test: ['CMD', 'node', '/app/services/healthcheck']
+#      interval: 1m30s
+#      timeout: 10s
+#      retries: 3
+#      start_period: 40s
+
+volumes:
+  public-dashy:
+  item-icons-dashy:
